--- a/etat.yml
+++ b/etat.yml
@@ -1,14 +1,14 @@
-lieu: table-ronde
+lieu: fontaine
 inventaire:
   - cheval
 personnages:
   - moi:
-    - santé: 10
+      - santé: 1
   - chevalier_noir:
-    - santé: 15
+      - santé: 0
   - lion:
-    - santé: 20
+      - santé: 20
   - serpent:
-    - santé: 20
+      - santé: 20
   - géant:
-    - santé: 25
+      - santé: 25
